# cantool

./: .flutter-plugins-dependencies  .gitignore  60-tsmaster.rules  README.md  a  b  pubspec.yaml  r  s
doc/: DBC_Specification.md  StatefullWidget.lifecycle.md
lib/: can_controller.dart  get_it.dart  localstorage_proxy.dart  main.dart  providers.dart
lib/bloc/: application_bloc.dart
lib/client/: localstorage_client.dart
lib/common/: failure.dart
lib/data/: repository.dart
lib/entity/: dbc_meta.dart  dbc_meta.freezed.dart  dbc_meta.g.dart  message_meta.dart  message_meta.freezed.dart  message_meta.g.dart  replay_file_.dart  replay_file_entity.dart  replay_file_entity.freezed.dart  replay_file_entity.g.dart  replay_model.dart  replay_model.g.dart  signal_meta.dart  signal_meta.freezed.dart  signal_meta.g.dart  strategy.dart  strategy.freezed.dart  strategy.g.dart
lib/model/: can_defs.dart  can_defs.g.dart  dbc_entity.dart  message_meta.dart  signal_meta.dart  strategy.dart
lib/pages/: app.dart
lib/pages/about/: about_appbar_view.dart  about_page.dart
lib/pages/home/: app_drawer.dart  appbar_view.dart  home_appbar_view.dart  home_page.dart  i18n.dart
lib/pages/receive/: receive_page.dart  receive_page.i18n.dart
lib/pages/replay/: filter_list.dart  filter_list_view.dart  models.dart  models.g.dart  providers.dart  replay_appbar_view.dart  replay_chart_view.dart  replay_filter_dialog.dart  replay_page.dart  replay_view_controller.dart  search_bar.dart
lib/pages/send/: message_item.dart  message_item.freezed.dart  message_item.g.dart  message_list_view.dart  providers.dart  send_page.dart  send_page.freezed.dart  send_page.g.dart  send_page.i18n.dart  signal_list_view.dart  strategy_item.dart  strategy_item.freezed.dart  strategy_item.g.dart
lib/providers/: providers.dart  repo_provider.dart
lib/repository/: can_repository.dart  dbc_meta_repository.dart  dbc_repository.dart  replay_repository.dart  repository.dart
lib/route/: router_handler.dart  routes.dart
lib/screens/about/: about_page.dart
lib/screens/dbc/: dbc_button.dart  dbc_button.i18n.dart
lib/screens/home/: app_drawer.dart  app_drawer.i18n.dart  appbar_bloc.dart  appbar_view.dart  appbar_view.i18n.dart  home_page.dart
lib/screens/receive/: message_item_view.dart  receive_bloc.dart  receive_container.dart  receive_page.dart  receive_page.i18n.dart  signal_item_view.dart
lib/screens/send/: send_bloc.dart  send_container.dart  send_page.dart  send_page.i18n.dart  send_signal_item.dart
lib/utils/: text.dart
lib/widget/: split_view.dart
lib/widget/drawer/: app_drawer.dart  i18n.dart
lib/widget/timeline/: mouse_coordinate_painter.dart  ticks.dart  timeline.dart  timeline_data.dart  timeline_entry.dart  timeline_render_widget.dart  timeline_utils.dart  timeline_widget.dart  utils.dart  x_axis.dart  y_axis.dart
linux/: CMakeLists.txt  Makefile  cantool.cc  my_application.cc  window_configuration.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
plugins/can/: .flutter-plugins-dependencies  .metadata  CMakeLists.txt.bak  README.md  pubspec.yaml
plugins/can/lib/: can.dart  usb_can.dart
plugins/can/lib/src/: can_channel.dart  can_utils.dart  models.dart  models.freezed.dart  models.g.dart  usb_can_channel.dart  usb_can_utils.dart
plugins/can/linux/: CMakeLists.txt  can_defs.h  can_device.cc  can_device.h  can_operator.cc  can_operator.h  can_plugin.cc  can_plugin.h  cstr.c  cstr.cc  cstr.h  dbc_parser.cc  dbc_parser.h  flutter_adapter.h  hashmap_base.h  libwecan.cc  libwecan.h  list.h  log.h  replay_operator.cc  replay_operator.h  usb_operator.cc  usb_operator.h
plugins/can/linux.bak/: CMakeLists.txt  Makefile  can_defs.cc  can_defs.h  can_device.cc  can_device.h  canalystii.cc  factory_prototype.h  libwecan.h  plugin_interface.cc  plugin_interface.h  signal_store.cc  timer.cc  types.h  utils.cc  utils.h  weapon_controller.cc  weapon_controller.h
plugins/can/linux.bak/ammo/: ammo_generator.cc  ammo_generator.h  ammo_part_generator.cc  build_strategy_type.h  part_build_const_strategy.h  part_build_sin_strategy.cc  (+2 more)
plugins/can/linux/asc/: asc-reader.c  asc-reader.h  asc_reader.cc  asc_reader.h  message-decoder.c  message-decoder.h
plugins/can/linux/blf/: blfapi.cc  blfparser.cc  blfparser.h  blfreader.cc  blfreader.h
plugins/can/linux/cmake/: FindLibFFI.cmake  FindLibUSB.cmake
plugins/can/linux/common/: CMakeLists.txt  kernel.h  thread_pool.c  thread_pool.h
plugins/can/linux/common/hashmap/: CMakeLists.txt  hashmap.c  hashmap_base.h
plugins/can/linux/common/list/: CMakeLists.txt  list.c  list_iterator.c
plugins/can/linux/common/queue/: CMakeLists.txt
plugins/can/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
plugins/can/linux/include/can/: can_plugin.h
plugins/can/linux/list/: list_node.cc
plugins/can/linux/main/: CMakeLists.txt  can_operator.c  can_operator.h  can_plugin.c  dbc_parser.c  dbc_parser.h  driver_manage.c  driver_manage.h  frame_to_flvalue.c  frame_to_flvalue.h  replay_operator.c  replay_operator.h
plugins/can/linux/main/asc/: asc_reader.c  asc_reader.h
plugins/can/linux/main/blf/: blfapi.c  blfapi.h  blfreader.c  blfstream.c  blfstream.h
plugins/can/linux/module/: CMakeLists.txt  bus.c  bus.h  can_defs.h  compiler_attributes.h  device.c  device.h  module.c  module.h
plugins/can/linux/tsmaster/: CMakeLists.txt  tsmaster.c  tsmaster.h
plugins/can/linux/usbcanii/: CMakeLists.txt  usbcanii.c  usbcanii.h
plugins/can/test/: can_method_channel_test.dart  can_test.dart
plugins/color_panel/: .flutter-plugins-dependencies
plugins/menubar/: .flutter-plugins-dependencies
plugins/usb_can/: .flutter-plugins-dependencies  README.md  pubspec.yaml
plugins/usb_can/linux/: Makefile  canalystii.h  enumerate.h  libwecan.cc  plugin_interface.cc  property.h  signal_store.h  timer.h  usb_can_plugin.cc  usb_can_plugin.h  weapon_controller.cc  weapon_controller.h
plugins/window_size/: .flutter-plugins-dependencies
res/values/: strings_en.arb  strings_zh_CN.arb
test/: widget_test.dart
(+17 files in other folders)
